@startuml
'https://plantuml.com/class-diagram
!theme reddress-darkgreen

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide enum methods

/' HOME / MASTER / START '/
class GameMaster{
    - GameMaster()
    + {override} _Ready()
}
GameMaster *..> "1"GridModel : > create and store\n - grid
GameMaster *..> "3"GaugeModel : > create and store\n - gauge
GameMaster *..> "1"GridView : > show
GameMaster *..> "3"GaugeView : > show

/' MODELS '/
class CellModel { /' TAG: Immutable '/
    - {static} {readonly} globalSize : Real
    - name : string
    + CellModel() 
    + CellModel(name : string, kind : CellKind)
    + GetName() : string
    + GetKind() : CellKind
}

enum CellKind{
    BUILDING,
    WASTELAND,
    PRIMARY
}
CellKind ..> "1"CellModel : > define\n - kind

class GrassModel extends CellModel {
    + GrassModel()
}

class GridModel{
    - {readonly} size : int
    + GridModel(size : int)
    + GetSize() : int
    + ReplaceCellAt (cell : CellModel, line : int, column : int, update : bool = false)
    + GetCellAt (int line, int column) : Cell
     /' argument specifies the position of the first cell, the rest is calculated by the grid itself: '/
    + PlaceAt (placeable : IPlaceable, line : int, column : int, update : bool = false)
    + GetAt (int line, int column) : IPlaceable
    + AddObserver(observer : IGridObserver)
    + RemoveObserver(observer : IGridObserver)
    + Notify() /' notify public: so you can request a forced update '/
}
GridModel *..> "*"CellModel : > stores\n- cells
GridModel <.. "*"IGridObserver : > notifies\n - observers
GridModel *..> "*"IPlaceable : > places\n- placeables   /' (Vector2I, IPlaceable)[*] '/

interface IGridObserver{
    + UpdateMap(gridStructur : cells[*])
}

interface IPlaceable{
    + GetComposition() : CellModel[*]
}

class BuildingModel implements IPlaceable { /' TAG: Immutable '/
    + BuildingModel(name : string, impacts : Real[3],\n\tneeds : FlowKind[*], production : FlowKind[*])
    + {static} CreateFromName(name : string) : BuildingModel
    - {static} {readonly} MULTIPLICATION_RATE : InfluenceScale[*]
    /' MULTIPLICATION_RATE : (InfluenceScale, int)[*]
    - {readonly} name : string
    - {readonly} impacts : Real[3]
    /' - needs : (FlowKind, int)[*] '/
    /' - production : (FlowKind, int)[*] '/
    + GetInfluence() : InfluenceScale
    + GetImpacts() : Real[3]
    + GetPartsNumber() : int
    + GetNeedsKinds() : FlowKind[]
    + GetProductionsKinds() : FlowKind[]
    + GetQuantityNeeded(flow : FlowKind) : int
    + GetQuantityProducted(flow : FlowKind) : int
    + ^GetComposition() : CellModel[*]
}
BuildingModel <.. "1"InfluenceScale : < amplifies needs\n and production
BuildingModel <.. "*"FlowKind : < need\n{readonly} - needs
BuildingModel <.. "*"FlowKind : < produces\n{readonly} - production
BuildingModel *..> "*"CellModel : < is composed of\n{readonly} - parts


enum FlowKind{
    Electricity,
    Raw_materials,
    Water,
    Cereals
}

enum InfluenceScale{
    REGIONAL,
    NATIONAL,
    WORLDWIDE
}

abstract GaugeModel{
    - value : Real
    +getValue() : Real
    +setValue(newVal : double)
    +addObserver(observer : IGaugeObserver)
    +removeObserver(observer : IGaugeObserver)
    +notifyRateAll(xval : Real)
}
GaugeModel ..> GaugeView : > notifies\n - observers

class EcologyGauge extends GaugeModel
class EconomyGauge extends GaugeModel
class SociabilityGauge extends GaugeModel

/' VUES '/
class CellView {
    - displayName : string
    - CellView()
    - CellView(displayName : string) 
    + {override} _Ready()
    + {static} Design() : CellView
    + SetSkin(Texture2D skin)
    + UpdateName(name : string)
    /' events '/ 
    - OnMouseOver()
    - OnMouseExit()
}

class GrassView extends CellView {
    - GrassView()
    + {static} {override} Design() : CellView
    + {override} _Ready()
}

class GridView implements IGridObserver {
    - GridView()
    + {static} Design()
    + {override} _Ready()
    + ^UpdateMap(gridStructur : cells[*])
}
GridView *..> "*"CellView : > manage and show
GridView *..> "*"BuildingView : > manage and show

/' OBSERVERS '/
class BuildingView {
    - BuildingModel()
    + {static} Design() : CellView
    + {override} _Ready() /' set children skin here '/
}


/' possibly add the DataManager '/
@enduml
